@@ -37,6 +37,12 @@ Bug Fixes
   scripts; remove -XX:+AggressiveOpts and only set -XX:-UseSuperWord for Java 1.7u40
   to u51. (Uwe Schindler, janhoy, hossman, Timothy Potter)
 
+Other Changes
+----------------------
+
+* SOLR-6661: Adjust all example configurations to allow overriding error-prone
+  relative paths for solrconfig.xml <lib> references with solr.install.dir
+  system property; bin/solr scripts will set it appropriately. (ehatcher)
 
 ==================  4.10.2 ==================
 
